GNOME Bugzilla – Bug 708821
503-reply is sent when failing to create media
Last modified: 2014-02-25 22:28:11 UTC
503-reply is sent when failing to create media even though it is a client error. If the client for examples tries to SETUP an invalid url (/test/xyz) that matches a factory (/test) the media cannot be constructed and the reply will be 503. The error ought to be a 4xx error since there is no problem on the server side.
Created attachment 255807 [details] [review] Reply 400 if media cannot be constructed This patch is supposed to be applied after the patch for bug #708819 has been applied.
commit 0cd24e2257fa191c609757dc61a4bc3195408c71 Author: Jonas Holmberg <jonashg@axis.com> Date: Thu Sep 26 11:20:05 2013 +0200 client: Reply 400 if media cannot be constructed Reply 400 Bad Request instead of 503 Service Unavailable if media cannot be constructed in SETUP. Fixes https://bugzilla.gnome.org/show_bug.cgi?id=708821